[package]
name = "diesel_todo_server"
version = "0.1.0"
authors = ["Haryus <haryus@vospay.id>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json"]
